{
  "version": 4,
  "terraform_version": "0.12.26",
  "serial": 40,
  "lineage": "999c9d89-5af4-8840-838a-ceab620a7250",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:376626875687:vpc/vpc-f70df09d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_security_group_id": "sg-605d3602",
            "dhcp_options_id": "dopt-ea5ba680",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-f70df09d",
            "instance_tenancy": "default",
            "owner_id": "376626875687",
            "tags": {
              "Name": "Default VPC"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "outbound-all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:376626875687:security-group/sg-04dbef4d286878c30",
            "description": "outbound-all",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outgoing icmp",
                "from_port": 8,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outgoing tcp",
                "from_port": 1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "outgoing udp",
                "from_port": 1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-04dbef4d286878c30",
            "ingress": [],
            "name": "tf-outbound-all",
            "name_prefix": null,
            "owner_id": "376626875687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow-all-outbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-f70df09d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:376626875687:security-group/sg-0e6e321d8e64e737b",
            "description": "ssh",
            "egress": [],
            "id": "sg-0e6e321d8e64e737b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "tf-ssh",
            "name_prefix": null,
            "owner_id": "376626875687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-f70df09d"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpn-inbound",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:376626875687:security-group/sg-06f559e3a4d32c7fc",
            "description": "vpn-inbound",
            "egress": [],
            "id": "sg-06f559e3a4d32c7fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "udp",
                "from_port": 1,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/10"
                ],
                "description": "tcp",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/10"
                ],
                "description": "tcp",
                "from_port": 853,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 853
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/10"
                ],
                "description": "udp",
                "from_port": 1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "tf-vpn-inbound",
            "name_prefix": null,
            "owner_id": "376626875687",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-inbound"
            },
            "timeouts": null,
            "vpc_id": "vpc-f70df09d"
          }
        }
      ]
    }
  ]
}